@@ -1,3 +1,7 @@
+Travel::Status::DE::IRIS 1.40 - Tue Dec 25 2019
+
+    * Incorporate the last few years' worth of station name changes
+
 Travel::Status::DE::IRIS 1.39 - Tue Dec 17 2019
 
     * Add missing geocoordinates to nearly all remaining stations
